# demo-coach

./: .env-example  .gitignore  README.md  pyproject.toml
.gemini/: GEMINI.MD
app/: main.py
app/templates/: index.html
