[project]
name = "demo-coach"
version = "0.1.0"
description = "A frontend web app to interact with the GECX agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "google-cloud-ces>=0.1.0",
    "google-auth>=2.28.0",
    "websockets>=12.0",
    "jinja2>=3.1.3",
]
